dhall/tests/type-inference/failure/unit/RecursiveRecordTypeMergeOverlapping.txt
Type error: error: RecordTypeMergeRequiresRecordType
 --> <current file>:1:0
  |
1 | { x : Bool } ⩓ { x : Natural }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RecordTypeMergeRequiresRecordType
  |
